Added parameter to choose where to deposit RO to
